[gd_scene load_steps=8 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://logo.png" type="Texture" id=2]
[ext_resource path="res://submenu.gd" type="Script" id=3]
[ext_resource path="res://bg.png" type="Texture" id=4]
[ext_resource path="res://info.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/main_theme.tres" type="Theme" id=6]
[ext_resource path="res://fonts/code_font.tres" type="DynamicFont" id=7]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 40.0
margin_right = -8.0
margin_bottom = -32.0
tab_align = 0

[node name="Metadata" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 30.0
margin_right = -2.0
margin_bottom = -2.0

[node name="code" type="TextEdit" parent="TabContainer/Metadata"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 10.0
margin_right = -6.0
margin_bottom = -6.0
custom_fonts/font = ExtResource( 7 )

[node name="Header" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 30.0
margin_right = -2.0
margin_bottom = -2.0

[node name="code" type="TextEdit" parent="TabContainer/Header"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 10.0
margin_right = -6.0
margin_bottom = -6.0
custom_fonts/font = ExtResource( 7 )

[node name="Footer" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 30.0
margin_right = -2.0
margin_bottom = -2.0

[node name="code" type="TextEdit" parent="TabContainer/Footer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 10.0
margin_right = -6.0
margin_bottom = -6.0
custom_fonts/font = ExtResource( 7 )

[node name="General Settings" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 30.0
margin_right = -2.0
margin_bottom = -2.0

[node name="Label" type="Label" parent="TabContainer/General Settings"]
anchor_left = 0.5
anchor_right = 0.5
margin_top = 10.0
margin_right = 124.0
margin_bottom = 28.0
text = "Preset Information: "

[node name="pagename" type="LineEdit" parent="TabContainer/General Settings"]
anchor_right = 0.5
margin_left = 6.0
margin_top = 34.0
margin_right = -8.0
margin_bottom = 58.0
text = "Web page!"

[node name="Label" type="Label" parent="TabContainer/General Settings/pagename"]
margin_top = -24.0
margin_right = 74.0
margin_bottom = -7.0
text = "Page name:"

[node name="pagenamesave" type="CheckBox" parent="TabContainer/General Settings/pagename"]
margin_top = 24.0
margin_right = 131.0
margin_bottom = 48.0
pressed = true
text = "Save page name"
flat = true

[node name="css" type="LineEdit" parent="TabContainer/General Settings"]
anchor_right = 0.5
margin_left = 6.0
margin_top = 114.0
margin_right = -8.0
margin_bottom = 138.0
text = "./style.css"

[node name="Label" type="Label" parent="TabContainer/General Settings/css"]
margin_top = -24.0
margin_right = 81.0
margin_bottom = -7.0
text = "CSS file path:"

[node name="csspathsave" type="CheckBox" parent="TabContainer/General Settings/css"]
margin_top = 24.0
margin_right = 139.0
margin_bottom = 48.0
pressed = true
text = "Save CSS file path"
flat = true

[node name="js" type="LineEdit" parent="TabContainer/General Settings"]
anchor_right = 0.5
margin_left = 6.0
margin_top = 194.0
margin_right = -8.0
margin_bottom = 218.0
text = "./script.js"

[node name="Label" type="Label" parent="TabContainer/General Settings/js"]
margin_top = -24.0
margin_right = 81.0
margin_bottom = -7.0
text = "Java Script file path:"

[node name="jspathsave" type="CheckBox" parent="TabContainer/General Settings/js"]
margin_top = 24.0
margin_right = 139.0
margin_bottom = 48.0
pressed = true
text = "Save Java Script file path"
flat = true

[node name="preset_info" type="TextEdit" parent="TabContainer/General Settings"]
anchor_left = 0.5
anchor_right = 1.0
margin_top = 34.0
margin_right = -4.0
margin_bottom = 250.0

[node name="top" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 40.0

[node name="about" type="Button" parent="top"]
margin_left = 56.0
margin_top = 8.0
margin_right = 112.0
margin_bottom = 32.0
text = "About"

[node name="file" type="Button" parent="top"]
margin_left = 8.0
margin_top = 8.0
margin_right = 48.0
margin_bottom = 32.0
text = "File"
script = ExtResource( 3 )

[node name="menu" type="PopupMenu" parent="top/file"]
margin_left = 8.0
margin_top = 32.0
margin_right = 144.0
margin_bottom = 168.0

[node name="new" type="Button" parent="top/file/menu"]
margin_left = 8.0
margin_top = 8.0
margin_right = 128.0
margin_bottom = 32.0
text = "New Preset"
flat = true

[node name="preset_save" type="Button" parent="top/file/menu"]
margin_left = 8.0
margin_top = 40.0
margin_right = 128.0
margin_bottom = 64.0
text = "Save Preset"
flat = true

[node name="html_save" type="Button" parent="top/file/menu"]
margin_left = 8.0
margin_top = 72.0
margin_right = 128.0
margin_bottom = 96.0
text = "Save to HTML"
flat = true

[node name="preset_load" type="Button" parent="top/file/menu"]
margin_left = 8.0
margin_top = 104.0
margin_right = 128.0
margin_bottom = 128.0
text = "Load Preset"
flat = true

[node name="save" type="FileDialog" parent="."]
visible = true
margin_left = 520.0
margin_top = 32.0
margin_right = 1016.0
margin_bottom = 504.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Open a Directory"
mode = 2
access = 2

[node name="save_preset" type="WindowDialog" parent="."]
visible = true
margin_left = 520.0
margin_top = -112.0
margin_right = 888.0
margin_bottom = -16.0
window_title = "Save Preset"

[node name="path" type="LineEdit" parent="save_preset"]
margin_left = 40.0
margin_top = 32.0
margin_right = 184.0
margin_bottom = 56.0

[node name="filename" type="LineEdit" parent="save_preset"]
margin_left = 192.0
margin_top = 32.0
margin_right = 320.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="save_preset"]
margin_left = 328.0
margin_top = 32.0
margin_right = 360.0
margin_bottom = 56.0
text = ".hpc"
align = 1
valign = 1

[node name="Label2" type="Label" parent="save_preset"]
margin_left = 8.0
margin_top = 8.0
margin_right = 64.0
margin_bottom = 32.0
text = "Save to:"
align = 1
valign = 1

[node name="Label3" type="Label" parent="save_preset"]
margin_left = 192.0
margin_top = 8.0
margin_right = 272.0
margin_bottom = 32.0
text = "With name:"
align = 1
valign = 1

[node name="save_preset_button" type="Button" parent="save_preset"]
margin_left = 8.0
margin_top = 64.0
margin_right = 361.0
margin_bottom = 88.0
text = "Save"

[node name="search" type="Button" parent="save_preset"]
margin_left = 8.0
margin_top = 32.0
margin_right = 32.0
margin_bottom = 56.0
text = "..."

[node name="save_html" type="WindowDialog" parent="."]
visible = true
margin_left = 520.0
margin_top = -312.0
margin_right = 888.0
margin_bottom = -216.0
window_title = "Save to HTML"

[node name="path" type="LineEdit" parent="save_html"]
margin_left = 40.0
margin_top = 32.0
margin_right = 184.0
margin_bottom = 56.0

[node name="filename" type="LineEdit" parent="save_html"]
margin_left = 192.0
margin_top = 32.0
margin_right = 320.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="save_html"]
margin_left = 328.0
margin_top = 32.0
margin_right = 360.0
margin_bottom = 56.0
text = ".html"
align = 1
valign = 1

[node name="Label2" type="Label" parent="save_html"]
margin_left = 8.0
margin_top = 8.0
margin_right = 64.0
margin_bottom = 32.0
text = "Save to:"
align = 1
valign = 1

[node name="Label3" type="Label" parent="save_html"]
margin_left = 192.0
margin_top = 8.0
margin_right = 272.0
margin_bottom = 32.0
text = "With name:"
align = 1
valign = 1

[node name="save_html_button" type="Button" parent="save_html"]
margin_left = 8.0
margin_top = 64.0
margin_right = 361.0
margin_bottom = 88.0
text = "Save"

[node name="search" type="Button" parent="save_html"]
margin_left = 8.0
margin_top = 32.0
margin_right = 32.0
margin_bottom = 56.0
text = "..."

[node name="load_preset" type="FileDialog" parent="."]
visible = true
margin_left = 1032.0
margin_top = 32.0
margin_right = 1528.0
margin_bottom = 504.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.hpc" )

[node name="about" type="WindowDialog" parent="."]
visible = true
margin_left = 64.0
margin_top = -256.0
margin_right = 344.0
margin_bottom = -40.0
window_title = "About HTML Preset Creator"

[node name="Label" type="Label" parent="about"]
margin_left = 8.0
margin_top = 112.0
margin_right = 248.0
margin_bottom = 184.0
text = "Make HTML files from Presets faster!
From OC Industries, by Alex135t"

[node name="Logo" type="Sprite" parent="about"]
position = Vector2( 104, 56 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="info" parent="." instance=ExtResource( 5 )]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -32.0
margin_right = -8.0
margin_bottom = 0.0

[connection signal="tab_changed" from="TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="toggled" from="TabContainer/General Settings/pagename/pagenamesave" to="." method="_on_pagenamesave_toggled"]
[connection signal="toggled" from="TabContainer/General Settings/css/csspathsave" to="." method="_on_csspathsave_toggled"]
[connection signal="toggled" from="TabContainer/General Settings/js/jspathsave" to="." method="_on_jspathsave_toggled"]
[connection signal="pressed" from="top/about" to="." method="_on_about_pressed"]
[connection signal="pressed" from="top/file" to="top/file" method="_on_self_pressed"]
[connection signal="pressed" from="top/file/menu/new" to="." method="_on_new_pressed"]
[connection signal="pressed" from="top/file/menu/preset_save" to="." method="_on_preset_save_pressed"]
[connection signal="pressed" from="top/file/menu/html_save" to="." method="_on_html_save_pressed"]
[connection signal="pressed" from="top/file/menu/preset_load" to="." method="_on_preset_load_pressed"]
[connection signal="dir_selected" from="save" to="." method="_on_save_dir_selected"]
[connection signal="text_changed" from="save_preset/path" to="." method="_on_path_text_changed"]
[connection signal="text_changed" from="save_preset/filename" to="." method="_on_filename_text_changed"]
[connection signal="pressed" from="save_preset/save_preset_button" to="." method="_on_save_preset_button_pressed"]
[connection signal="pressed" from="save_preset/search" to="." method="_on_search_pressed"]
[connection signal="text_changed" from="save_html/path" to="." method="_on_path_text_changed"]
[connection signal="text_changed" from="save_html/filename" to="." method="_on_filename_text_changed"]
[connection signal="pressed" from="save_html/save_html_button" to="." method="_on_save_html_button_pressed"]
[connection signal="pressed" from="save_html/search" to="." method="_on_search_pressed"]
[connection signal="file_selected" from="load_preset" to="." method="_on_load_preset_file_selected"]
